Sanitize with -Xsource:3